--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
   <link rel="icon" type="image/svg+xml" href="assets/favicon.svg" />
   <style>
     :root {
-      --bg-1: #eef3fb;
-      --bg-2: #dbe6f6;
-      --surface: #ffffffcc;
-      --surface-border: #dde6f5;
-      --card: #fff;
-      --text: #1f2a44;
-      --muted: #475a7a;
+      --bg: #0b1220;
+      --card: #11192a;
+      --muted: #a8b3cf;
+      --text: #e8eefc;
       --brand: #4f7cff;
       --brand-2: #7cc5ff;
     }
@@ -25,9 +22,7 @@
       padding: 0;
       font: 16px/1.6 system-ui, -apple-system, Segoe UI, Roboto, Inter, Arial, sans-serif;
       color: var(--text);
-      background:
-        radial-gradient(1200px 520px at 18% 120px, var(--bg-1) 0%, var(--bg-2) 38%, var(--bg-1) 68%),
-        linear-gradient(#eef3fb, #eef3fb);
+      background: var(--bg);
     }
 
     a {
@@ -49,7 +44,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      margin-bottom: 20px;
+      margin-bottom: 28px;
     }
 
     .logo-title {
@@ -79,20 +74,10 @@
       font-weight: 600;
     }
 
-    .surface {
-      background: var(--surface);
-      border: 1px solid var(--surface-border);
-      border-radius: 24px;
-      box-shadow: 0 12px 28px rgba(31, 42, 68, 0.08);
-      padding: 28px 22px;
-      backdrop-filter: saturate(120%) blur(2px);
-      margin-top: 12px;
-    }
-
     .hero {
       display: grid;
       gap: 16px;
-      padding: 24px 0;
+      padding: 40px 0;
     }
 
     .hero h1 {
@@ -116,11 +101,10 @@
     }
 
     .card {
-      background: var(--card);
-      border: 1px solid #e3eaf6;
+      background: linear-gradient(180deg, rgba(255, 255, 255, 0.02), rgba(255, 255, 255, 0.01));
+      border: 1px solid rgba(148, 163, 184, 0.15);
       border-radius: 16px;
       padding: 18px;
-      box-shadow: 0 2px 10px rgba(31, 42, 68, 0.05);
     }
 
     .card h3 {
@@ -129,8 +113,8 @@
     }
 
     footer {
-      margin: 32px 0 12px;
-      color: #4a5060;
+      margin: 48px 0 16px;
+      color: #9aa3b2;
       font-size: 14px;
       text-align: center;
     }
@@ -158,48 +142,46 @@
       <a class="cta" href="https://safety-trends.com" target="_blank" rel="noopener">Visit Safety-Trends →</a>
     </header>
 
-    <div class="surface">
-      <section class="hero">
-        <div class="pill">IT</div>
-        <h1>Turning public data into actionable insights.</h1>
-        <p>Innovation-Trends creates lightweight, privacy-respecting software that helps people make safer, smarter decisions. Our current focus is <b>Safety-Trends</b> — a city safety timeline powered by open data.</p>
-      </section>
+    <section class="hero">
+      <div class="pill">IT</div>
+      <h1>Turning public data into actionable insights.</h1>
+      <p>Innovation-Trends creates lightweight, privacy-respecting software that helps people make safer, smarter decisions. Our current focus is <b>Safety-Trends</b> — a city safety timeline powered by open data.</p>
+    </section>
 
-      <div class="cards">
-        <div class="card">
-          <h3>Safety-Trends</h3>
-          <p>Real-time incidents, maps, and alerts for your city. Built on open, verifiable sources.</p>
-          <a href="https://safety-trends.com" target="_blank">Visit Safety-Trends →</a>
-        </div>
-        <div class="card">
-          <h3>Our Approach</h3>
-          <p>Small, focused products. Clear value. Transparent sources. Ship fast, iterate with real feedback.</p>
-        </div>
-        <div class="card">
-          <h3>What’s Next</h3>
-          <p>Selective partnerships and city rollouts. Press & updates will be posted here as they happen.</p>
-        </div>
+    <div class="cards">
+      <div class="card">
+        <h3>Safety-Trends</h3>
+        <p>Real-time incidents, maps, and alerts for your city. Built on open, verifiable sources.</p>
+        <a href="https://safety-trends.com" target="_blank">Visit Safety-Trends →</a>
+      </div>
+      <div class="card">
+        <h3>Our Approach</h3>
+        <p>Small, focused products. Clear value. Transparent sources. Ship fast, iterate with real feedback.</p>
+      </div>
+      <div class="card">
+        <h3>What’s Next</h3>
+        <p>Selective partnerships and city rollouts. Press & updates will be posted here as they happen.</p>
+      </div>
+    </div>
+
+    <section class="split" id="about">
+      <div class="card">
+        <h3>About</h3>
+        <p class="muted">Innovation-Trends LLC (Washington, USA) develops practical, privacy-aware apps that make public data useful. We favor straightforward UX, lean infrastructure, and measurable impact.</p>
       </div>
 
-      <section class="split" id="about">
-        <div class="card">
-          <h3>About</h3>
-          <p class="muted">Innovation-Trends LLC (Washington, USA) develops practical, privacy-aware apps that make public data useful. We favor straightforward UX, lean infrastructure, and measurable impact.</p>
-        </div>
+      <div class="card" id="contact">
+        <h3>Contact</h3>
+        <ul class="list">
+          <li>Email: <a href="mailto:info@innovation-trends.com">info@innovation-trends.com</a></li>
+          <li>Project: <a href="https://safety-trends.com" target="_blank" rel="noopener">Safety-Trends</a></li>
+        </ul>
+      </div>
+    </section>
 
-        <div class="card" id="contact">
-          <h3>Contact</h3>
-          <ul class="list">
-            <li>Email: <a href="mailto:info@innovation-trends.com">info@innovation-trends.com</a></li>
-            <li>Project: <a href="https://safety-trends.com" target="_blank" rel="noopener">Safety-Trends</a></li>
-          </ul>
-        </div>
-      </section>
-
-      <footer>
-        © <span id="year"></span> Innovation-Trends LLC — Registered in Washington State
-      </footer>
-    </div>
+    <footer>
+      © <span id="year"></span> Innovation-Trends LLC — Registered in Washington State
+    </footer>
   </div>
 
   <script>
